--- a/Estilo/slides-utfpr.tex
+++ b/Estilo/slides-utfpr.tex
@@ -44,6 +44,10 @@
 \usepackage{url,color}
 \usepackage{listings,upquote}
 
+% Teste Shading
+\usepackage{color}
+\usepackage[usenames,dvipsnames,svgnames,x11names]{xcolor}
+
 
 %--------- Insercao de codigo fonte nos slides --------------------%
 \definecolor{hellgelb}{rgb}{1,1,0.9}
