--- a/Figuras/RoboJubileu.tex
+++ b/Figuras/RoboJubileu.tex
@@ -1,24 +1,30 @@
-\begin{figure}[h]
+\begin{figure}[!ht]
 \centering
-\caption{Materiais e robô após montagem}
-\label{fig:RoboReal}
 	\begin{subfigure}[b]{0.49\textwidth}%
 		\centering
-		% fbox{}
 		\includegraphics[trim= 0cm 0cm 0cm 0cm,clip,
-scale=0.07]{Figuras/Robo1}
-		\subcaption{Materiais do robô}
-	  	%\label{fig:test1}
-	\end{subfigure}
+scale=0.03]{Figuras/RoboMontagem1}%
+		\subcaption{Posicionamento dos sensores IR}%
+	\end{subfigure}%
 	~
 	\begin{subfigure}[b]{0.49\textwidth}%
 		\centering
-		% fbox{}
 		\includegraphics[trim={0cm 0cm 0cm 0cm},clip,
-scale=0.07]{Figuras/Robo2}
-		\subcaption{Robô montado}
-	  	%\label{fig:test2}
-	\end{subfigure}
-	
-	\textbf{Fonte: autoria própria}
+scale=0.03]{Figuras/RoboMontagem2}%
+		\subcaption{Disposição dos motores e microcontrolador}%
+	\end{subfigure}%
+	~
+	\begin{subfigure}[b]{0.49\textwidth}%
+		\centering
+		\includegraphics[trim= 0cm 0cm 0cm 0cm,clip,
+scale=0.03]{Figuras/RoboMontagem3}%
+		\subcaption{Regulador de Tensão}%
+	\end{subfigure}%
+	~
+	\begin{subfigure}[b]{0.49\textwidth}%
+		\centering
+		\includegraphics[trim={0cm 0cm 0cm 0cm},clip,
+scale=0.03]{Figuras/RoboMontagem4}%
+		\subcaption{Posicionamento dos componentes}%
+	\end{subfigure}%
 \end{figure}
