--- a/Tabelas/TabelaCustos.tex
+++ b/Tabelas/TabelaCustos.tex
@@ -1,5 +1,5 @@
-\begin{table}[h]
-%\caption{Tabela de custos}
+\begin{table}[ht]
+\caption{Tabela de custos}
 \vspace{0.2 cm}
 %\footnotesize
 \resizebox{\linewidth}{!}{
@@ -10,15 +10,11 @@
 \cline{1-4}
 \multicolumn{1}{|l|}{Bateria LiPo Limskey 11,1v 3S 4200mAh}                     
 & 1   & 112,05              & 112,05           &  \\ \cline{1-4}
-\multicolumn{1}{|l|}{Módulo para cartão de memória SD WAVGAT, comunicação SPI}                          & 1   & 2,79           & 2,79        &  \\ \cline{1-4}
 \multicolumn{1}{|l|}{Ponte H dupla L298N}                                                               & 1   & 6,12           & 6,12        &  \\ \cline{1-4}
 \multicolumn{1}{|l|}{Sensor infravermelho GP2Y0A21YK0F, alcance de 10 a 80 cm}                          & 5   & 13,07          & 65,35       &  \\ \cline{1-4}
 \multicolumn{1}{|l|}{Módulo conversor Buck DC-DC, saída 5v}                     
 & 1   & 9,14           & 9,14        &  \\ \cline{1-4}
-\multicolumn{1}{|l|}{Sensor inercial IMU GY-87, com 10 graus de liberdade (MPU6050, HCM5883L, BMP180)}  & 1   & 25,9           & 25,9        &  \\ \cline{1-4}
-\multicolumn{1}{|l|}{Módulo wireless NRF24L01 com antena de alcance de 1000
-metros}                     & 1   & 7,69              & 7,69           &  \\
-\cline{1-4}
+\multicolumn{1}{|l|}{Módulo Bluetooth XM-15}  & 1   & 25,00           & 25,00        &  \\ \cline{1-4}
 \multicolumn{1}{|l|}{Conjuntos de motores, caixa de redução 1:34 e sensores de efeito hall (341,2 PPR)} & 2   & 47,015         & 94,03       &  \\ \cline{1-4}
 \multicolumn{1}{|l|}{Esfera de rolagem}                                                                 & 1   & 2,002          & 2,002       &  \\ \cline{1-4}
 \multicolumn{1}{|l|}{Tiva Connected LaunchPad TM4C1294
@@ -29,7 +25,7 @@ metros}                     & 1   & 7,69              & 7,69           &  \\
                                                                                                         &
                                                                                                         Total:
                                                                                                         &
-                                                                                                        405,07     &  \\ \cline{3-4}
+                                                                                                        393,69     &  \\ \cline{3-4}
 \end{tabular}}
 \label{tab:custo}
 \end{table}
