--- a/Figuras/ResultadoIPO.tex
+++ b/Figuras/ResultadoIPO.tex
@@ -1,13 +1,11 @@
 \begin{figure}[!ht]
 \centering
-\caption{Resultado do comportamento ``Ir Para Objetivo''}
-\label{fig:resultadoImplementadoIPO}
 		\centering
 		% fbox{}
 		%\includegraphics[clip, 
 %scale=0.058]{Figuras/ComportamentoIPO}%
+\resizebox{\columnwidth}{!}{
 		\includegraphics[clip, 
 scale=0.29]{Figuras/ComportamentoIPOCompactado}%
-
-	\textbf{Fonte: autoria própria}
+}
 \end{figure}
