--- a/Figuras/ResultadoMesclado.tex
+++ b/Figuras/ResultadoMesclado.tex
@@ -1,13 +1,10 @@
 \begin{figure}[!ht]
-\centering
-\caption{Resultado do comportamento ``Mesclado''}
-\label{fig:resultadoImplementadoMesclado}
 		\centering
 		% fbox{}
 		%\includegraphics[clip, 
 %scale=0.058]{Figuras/ComportamentoIPO_E_EO}%
+\resizebox{\columnwidth}{!}{
 		\includegraphics[clip, 
 scale=0.29]{Figuras/ComportamentoIPO_E_EOCompactado}%
-
-	\textbf{Fonte: autoria própria}
+}
 \end{figure}
