--- a/Figuras/ResultadoSP.tex
+++ b/Figuras/ResultadoSP.tex
@@ -1,13 +1,10 @@
 \begin{figure}[!ht]
-\centering
-\caption{Resultado do comportamento ``Seguir Parede''}
-\label{fig:resultadoImplementadoSP}
 		\centering
 		% fbox{}
 		%\includegraphics[clip, 
 %scale=0.058]{Figuras/ComportamentoSP}%
+\resizebox{\columnwidth}{!}{
 		\includegraphics[clip, 
 scale=0.29]{Figuras/ComportamentoSPCompactado}%
-
-	\textbf{Fonte: autoria própria}
+}
 \end{figure}
