--- a/Tabelas/ComunicacaoComandos.tex
+++ b/Tabelas/ComunicacaoComandos.tex
@@ -1,7 +1,7 @@
 \begin{table}[ht]
 \centering
-\caption{Comandos disponíveis na interface por linha de comando via \textit{bluetooth}}
 \vspace{0.2 cm}
+\resizebox{0.9\linewidth}{!}{
 \begin{tabular}{|l|l|}
 \hline
 \textbf{Comando}       & \textbf{Descrição}                                                                                                                     \\ \hline
@@ -11,5 +11,5 @@ SETCOORDOBJ(X.XX,Y.YY) & Redefine a coordenada objetivo                         
 GETSTATE               & \begin{tabular}[c]{@{}l@{}}Utilizado para obter a resposta do estado do robô\\ ($x$, $y$ e $\theta$) a cada iteração, bem como o valor de seus\\ sensores \end{tabular}      \\ \hline
 EXIT                   & \begin{tabular}[c]{@{}l@{}}Necessário para solicitar ao robô para que deixe \\ de informar seu estado a cada iteração\end{tabular}     \\ \hline
 \end{tabular}
-\label{tab:comunicacaoComandos}
+}
 \end{table}
