--- a/src/ConsideracoesFinais.tex
+++ b/src/ConsideracoesFinais.tex
@@ -1,12 +1,12 @@
-\subsection{Considerações Finais}
+\subsection{Considerações Finais e Trabalhos Futuros}
 \begin{frame}
-	\frametitle{Considerações Finais}
+	\frametitle{Considerações Finais e Trabalhos Futuros}
 	
 	\begin{block}{}
 		\begin{itemize}
-		  \item Autonomia em arquiteturas não deliberativas.
-		  \item Estimativa de estado.
-		  \item Comparação qualitativa.
+		  \item Arbitragem X Fusão
+		  \pause
+		  \item Infraestrutura
 		\end{itemize}
 	\end{block}
 \end{frame}
