--- a/src/Desenvolvimento.tex
+++ b/src/Desenvolvimento.tex
@@ -14,16 +14,6 @@
 	\vspace{-3.5cm}
 	\input{Figuras/FigRobosEmSim}
 \end{frame}
-	
-\begin{frame}
-	\begin{exampleblock}{Alterações mais importantes}
-		\begin{itemize}
-		  \item Incluir uma classe para implementar aspectos físicos do robô deste
-		  trabalho.
-		  \item Incluir suporte para controladores \textit{fuzzy}.
-		\end{itemize}
-	\end{exampleblock}
-\end{frame}
 
 \begin{frame}
 	\frametitle{Especificações}
@@ -616,7 +606,7 @@
 \end{frame}
 
 \begin{frame}
-	\begin{exampleblock}{Regras Fuzzy}
+	\begin{exampleblock}{Regras Fuzzy - Evitar Obstáculo}
 		\input{Tabelas/FuzzyEvitarObstaculoTabelaRegras}
 	\end{exampleblock}
 \end{frame}
@@ -775,7 +765,7 @@
 \end{frame}
 
 \begin{frame}
-	\begin{block}{Regras para Seguir Parede}
+	\begin{block}{Regras Fuzzy para Seguir Parede}
 		\input{Tabelas/FuzzySeguirParedeTabelaRegras}
 	\end{block}
 \end{frame}
