--- a/src/Introducao.tex
+++ b/src/Introducao.tex
@@ -1,38 +1,38 @@
 \setbeamercovered{transparent}
-\subsection{Introdução}
-\begin{frame}
-	\frametitle{Introdução}
-	\begin{block}{Aspectos Qualitativos}
-		Arquiteturas:
-		\begin{itemize}
-		  \item<1,2> Deliberativa.
-		  \item<1,3> Reativa.
-		  \item<1,4> Híbrida.
-		  \item<1,5> Comportamental.
-		\end{itemize}
-	\end{block}
-	
-	%\pause
-	\begin{overprint}
-	\onslide<2>
-	\begin{exampleblock}<2>{Deliberativa}
-		``Pensar antes de agir''.\\
-		Foco no longo prazo.
-	\end{exampleblock}
-	\onslide<3>
-	\begin{exampleblock}<3>{Reativa}
-		Reagir rapidamente a estímulos, sem planejar.\\
-		Foco no curto prazo.
-	\end{exampleblock}
-	\onslide<4>
-	\begin{exampleblock}<4>{Híbrida}
-		Camadas deliberativa e reativa em conjunto.\\
-		Desafio: extrair o melhor de cada abordagem.
-	\end{exampleblock}
-	\onslide<5>
-	\begin{exampleblock}<5>{Comportamental}
-		Semelhante à arquitetura reativa. \\
-		Difere pelo nível de abstração.
-	\end{exampleblock}
-	\end{overprint}
-\end{frame}
+% \subsection{Introdução}
+% \begin{frame}
+% 	\frametitle{Introdução}
+% 	\begin{block}{Aspectos Qualitativos}
+% 		Arquiteturas:
+% 		\begin{itemize}
+% 		  \item<1,2> Deliberativa.
+% 		  \item<1,3> Reativa.
+% 		  \item<1,4> Híbrida.
+% 		  \item<1,5> Comportamental.
+% 		\end{itemize}
+% 	\end{block}
+% 	
+% 	%\pause
+% 	\begin{overprint}
+% 	\onslide<2>
+% 	\begin{exampleblock}<2>{Deliberativa}
+% 		``Pensar antes de agir''.\\
+% 		Foco no longo prazo.
+% 	\end{exampleblock}
+% 	\onslide<3>
+% 	\begin{exampleblock}<3>{Reativa}
+% 		Reagir rapidamente a estímulos, sem planejar.\\
+% 		Foco no curto prazo.
+% 	\end{exampleblock}
+% 	\onslide<4>
+% 	\begin{exampleblock}<4>{Híbrida}
+% 		Camadas deliberativa e reativa em conjunto.\\
+% 		Desafio: extrair o melhor de cada abordagem.
+% 	\end{exampleblock}
+% 	\onslide<5>
+% 	\begin{exampleblock}<5>{Comportamental}
+% 		Semelhante à arquitetura reativa. \\
+% 		Difere pelo nível de abstração.
+% 	\end{exampleblock}
+% 	\end{overprint}
+% \end{frame}
