--- a/Figuras/FuzzySeguirVetorSaidasW.tex
+++ b/Figuras/FuzzySeguirVetorSaidasW.tex
@@ -9,10 +9,8 @@
 
 \begin{figure}[!ht]%
     \centering
-\resizebox{0.9\columnwidth}{!}{
-\begin{tikzpicture}[scale = 1, auto, node distance=2cm, on grid, >=latex']%
-	\begin{axis}[xmin=-1, xmax=1,ymax=1.1, samples=50, xlabel={velocidades angulares},
-	ylabel={$\mu$}, width=\textwidth, height=\axisdefaultheight, xtick distance={0.25}]
+\begin{tikzpicture}[scale = 0.9, auto, node distance=2cm, on grid, >=latex']%
+	\begin{axis}[xmin=-1, xmax=1,ymax=1.1, samples=50, xlabel={velocidades angulares}, ylabel={$\mu$}, width=\textwidth, height=\axisdefaultheight, xtick distance={0.25}]
 		\addplot [thick, color=black] table {
 			-1 0
 			1 0
@@ -62,5 +60,4 @@
 		} node[color=gray, yshift=0.5cm, xshift=-0.4cm, above, pos = .8] {PGSat};
 	\end{axis}
 \end{tikzpicture}%
-}
 \end{figure}
