--- a/Figuras/ResultadoEO.tex
+++ b/Figuras/ResultadoEO.tex
@@ -1,13 +1,10 @@
 \begin{figure}[!ht]
-\centering
-\caption{Resultado do comportamento ``Evitar Obstáculo''}
-\label{fig:resultadoImplementadoEO}
 		\centering
 		% fbox{}
 		%\includegraphics[clip, 
 %scale=0.058]{Figuras/ComportamentoEO}%
+\resizebox{\columnwidth}{!}{
 		\includegraphics[clip, 
 scale=0.29]{Figuras/ComportamentoEOCompactado}%
-
-	\textbf{Fonte: autoria própria}
+}
 \end{figure}
