--- a/Figuras/ResultadoFuzzy.tex
+++ b/Figuras/ResultadoFuzzy.tex
@@ -1,13 +1,10 @@
 \begin{figure}[ht]
-\centering
-\caption{Resultado implementado para o controlador \textit{fuzzy}}
-\label{fig:resultadoImplementadoFuzzy}
 		\centering
 		% fbox{}
 		%\includegraphics[clip, 
 %scale=0.058]{Figuras/fuzzy}
+\resizebox{\columnwidth}{!}{
 		\includegraphics[clip, 
 scale=0.29]{Figuras/fuzzyCompactado}
-
-	\textbf{Fonte: autoria própria}
+}
 \end{figure}
