--- a/Figuras/ResultadoHibrido.tex
+++ b/Figuras/ResultadoHibrido.tex
@@ -1,13 +1,10 @@
 \begin{figure}[ht]
-\centering
-\caption{Resultado implementado para o controlador híbrido}
-\label{fig:resultadoImplementadoHibrido}
 		\centering
 		% fbox{}
 		%\includegraphics[clip, 
 %scale=0.058]{Figuras/hibrido}%
+\resizebox{\columnwidth}{!}{
 		\includegraphics[clip, 
 scale=0.29]{Figuras/hibridoCompactado}%
-
-	\textbf{Fonte: autoria própria}
+}
 \end{figure}
