--- a/Figuras/SimulacaoHibrido.tex
+++ b/Figuras/SimulacaoHibrido.tex
@@ -1,13 +1,10 @@
 \begin{figure}[ht]
-\centering
-\caption{Resultado em simulação para o controlador híbrido}
-\label{fig:resultadoSimulacaoHibrido}
 		\centering
 		% fbox{}
 		%\includegraphics[clip, 
 %scale=0.058]{Figuras/simulacao_hibrido}
+\resizebox{\columnwidth}{!}{
 		\includegraphics[clip, 
 scale=0.29]{Figuras/simulacao_hibridoCompactado}
-		
-	\textbf{Fonte: autoria própria}
+}
 \end{figure}
