--- a/src/Objetivos.tex
+++ b/src/Objetivos.tex
@@ -5,18 +5,28 @@
 		\begin{itemize}
 		  \item[$\rightarrow$] Construir robô autônomo, sem armazenamento de mapa,
 		  capaz de desviar de obstáculos.
-		  \item[$\rightarrow$] Comparar qualitativamente: controlador Híbrido e
-		  \textit{Fuzzy}.
+		  \pause
+		  \item[$\rightarrow$] Comparar qualitativamente: arbitragem e fusão de comportamentos.
 		\end{itemize}
 	\end{exampleblock}
 	\pause
 	\begin{block}{Objetivos Específicos}
 		\begin{itemize}
 		  \item[$\rightarrow$] Modelagem.
-		  \item[$\rightarrow$] Arquitetura de controle.
+		  \pause
+		  \item[$\rightarrow$] Implementar arbitragem de comportamentos usando controlador 
+		  híbrido.
+		  \pause
+		  \item[$\rightarrow$] Implementar fusão de comportamentos usando controlador 
+		  \textit{fuzzy}.
+		  \pause
 		  \item[$\rightarrow$] Implementação física.
+		  \pause
 		  \item[$\rightarrow$] Implementação do sistema embarcado.
+		  \pause
 		  \item[$\rightarrow$] Teste e validação.
+		  \pause
+		  \item[$\rightarrow$] Comparar arbitragem e fusão de comportamentos.
 		\end{itemize}
 	\end{block}
 \end{frame}
