--- a/src/Desenvolvimento.tex
+++ b/src/Desenvolvimento.tex
@@ -91,6 +91,8 @@
 \end{frame}
 	
 \begin{frame}
+	\begin{block}{Algoritmo para conversão de modelos}
+	\vspace{-0.45cm}
 	\begin{algorithm}[H]
 		\algsetup{linenosize=\tiny}
 		\scriptsize
@@ -149,6 +151,7 @@
 			\STATE $\omega_l, \omega_r \leftarrow uniToDiff(v,\omega)$
 		\end{algorithmic}
 	\end{algorithm}
+	\end{block}
 \end{frame}
 
 \begin{frame}
