--- a/document.tex
+++ b/document.tex
@@ -19,7 +19,7 @@ Acadêmico: Marcelo Gervazoni Carbonera}
 do Paraná}}\\
 Engenharia de Computação\\
 \textit{Campus} Pato Branco}
-\date{20 de Setembro de 2021}
+\date{7 de Outubro de 2021}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Para usar subfiguras %%
